# ArmaPerformanceMonitor

./: .gitignore  README.md
addons/PerformanceMonitor/: $PBOPREFIX$  .gitignore  config.cpp  macros.hpp  modules.hpp
addons/PerformanceMonitor/Core/: fn_clientInit.sqf  fn_init.sqf  fn_recursiveInfoSending.sqf  fn_serverInit.sqf  fn_togglePerformanceInfoSending.sqf  macros.hpp
extensions/: .gitignore  CMakeLists.txt
extensions/include/: DllEntry.hpp
extensions/src/: Logger.cpp
